hphp/test/zend/good/Zend/tests/use_function/case_insensivity.php.expectf

Fatal error: Cannot use function foo\BAR as BAR because the name is already in use in %s/case_insensivity.php on line 5
